# Commit-Drafter

./: .gitignore  .vscodeignore  README.md  build.bat  build.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
auto_commit/: cli.py  config.py  git_ops.py  llm_client.py
auto_commit.egg-info/: PKG-INFO  requires.txt
src/: SidePanelProvider.ts  agentLoop.ts  agentTools.ts  autoCommit.ts  cli.py  commitCopilot.ts  commitDrafter.ts  config.py  errors.ts  extension.ts  git_ops.py  llmClients.ts  llm_client.py  models.ts
